fix menu collapse button

--- a/slide13/style.css
+++ b/slide13/style.css
@@ -66,6 +66,7 @@ select {
     padding-left: 5px;
     background-color: #218ffe;
     right: 0px;
+    z-index: 10000;
 }
 
 svg {
